--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -13,10 +13,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.11
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - uses: psf/black@stable
+        with:
+          options: "--check ."
 
   test:
     runs-on: ubuntu-latest
@@ -24,11 +33,9 @@ jobs:
     needs: build
 
     steps:
-      - uses: actions/checkout@v2
-
       - name: Run django tests
         run: |
-          python manage.py test --pattern="tests/test_django*.py"
+          python manage.py test --pattern="tests/test_django_*.py"
 
       - name: Run end-to-end tests
         run: |
