--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -3,6 +3,7 @@ attrs==23.2.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 Django==4.2.11
+django-cors-headers==4.3.1
 django-debug-toolbar==4.3.0
 djangorestframework==3.14.0
 drf-spectacular==0.27.1
