--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -30,13 +30,13 @@ jobs:
 
     steps:
       - name: Run django tests
-        working-directory: src/backend
+        working-directory: ./src/backend
         run: |
           python manage.py test apps.users.test_models
           python manage.py test apps.users.test_urls
           python manage.py test apps.users.test_views
 
       - name: Run end-to-end tests
-        working-directory: src/backend
+        working-directory: ./src/backend
         run: |
           python manage.py test apps.users.test_end_to_end
