--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -29,6 +29,8 @@ jobs:
     needs: build
 
     steps:
+      - uses: actions/checkout@v2
+
       - name: Run django tests
         working-directory: ./src/backend
         run: |
