--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,9 +18,10 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Install dependencies
+      - name: Create virtualenv with required dependencies
         run: |
-          python -m pip install --upgrade pip
+          python3 -m venv venv
+          source venv/bin/activate
           pip install -r requirements.txt
 
   test:
