[Actions] Created venv in actions

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Run django tests
         working-directory: ./src/backend
         run: |
+          django-admin --version
           python manage.py test apps.users.test_models
           python manage.py test apps.users.test_urls
           python manage.py test apps.users.test_views
