--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,16 +18,15 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Create virtualenv with required dependencies
+      - name: Create virtualenv
         run: |
           python3 -m venv venv
           source venv/bin/activate
-          pip install -r requirements.txt
 
       - name: Run django tests
         working-directory: ./src/backend
         run: |
-          django-admin --version
+          pip install -r requirements.txt
           python manage.py test apps.users.test_models
           python manage.py test apps.users.test_urls
           python manage.py test apps.users.test_views
@@ -35,4 +34,5 @@ jobs:
       - name: Run end-to-end tests
         working-directory: ./src/backend
         run: |
+          pip install -r requirements.txt
           python manage.py test apps.users.test_end_to_end
