--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run django tests
         working-directory: ./src/backend
         run: |
-          pip install -r requirements.txt
+          pip install -r ../../requirements.txt
           python manage.py test apps.users.test_models
           python manage.py test apps.users.test_urls
           python manage.py test apps.users.test_views
@@ -34,5 +34,5 @@ jobs:
       - name: Run end-to-end tests
         working-directory: ./src/backend
         run: |
-          pip install -r requirements.txt
+          pip install -r ../../requirements.txt
           python manage.py test apps.users.test_end_to_end
