--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           pip install -r ../../requirements.txt
           npm install
-          npm run test
+          npm run dev
 
       - name: Run end-to-end tests
         working-directory: ./src/backend
